--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "jj-demo-block",
   "private": false,
-  "version": "0.1.3",
+  "version": "0.1.5",
   "type": "module",
   "module": "dist/jj-demo-block-bundle.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/felbry/jj-demo-block"
+  },
   "exports": {
     ".": {
       "import": "./dist/jj-demo-block-bundle.js"
